# semgrep-discovery

./: pyproject.toml
