[tool.poetry]
name = "semgrep-discovery"
version = "0.1.0"
description = "Discovery of sensitive security objects in project code"
authors = ["Dmitry Marushkin <dmarushkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
semgrep = "^1.58.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
